Add Ingredients Heading

--- a/recipes/basilchicken.html
+++ b/recipes/basilchicken.html
@@ -20,5 +20,6 @@
                  Chicken is not only a feast for the palate but also a dish that 
                  entices with its aromatic allure, promising a culinary journey
                   that is both comforting and exotic.</p>
+        <h2>Ingredients</h2>
     </body>
 </html>
