Add Ingredient List

--- a/recipes/basilchicken.html
+++ b/recipes/basilchicken.html
@@ -21,5 +21,14 @@
                  entices with its aromatic allure, promising a culinary journey
                   that is both comforting and exotic.</p>
         <h2>Ingredients</h2>
+            <ul>
+                <li>Ground Chicken</li>
+                <li>Onion</li>
+                <li>Green Beans</li>
+                <li>Sauce</li>
+                <li>Basil</li>
+                <li>Garlic Pepper</li>
+                <li>Rice</li>
+            </ul>
     </body>
 </html>
