--- a/recipes/basilchicken.html
+++ b/recipes/basilchicken.html
@@ -30,5 +30,15 @@
                 <li>Garlic Pepper</li>
                 <li>Rice</li>
             </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Mince garlic and pepper.</li>
+                <li>Chop onion and green beans.</li>
+                <li>Heat wok over medium-high heat.</li>
+                <li>Add garlic, pepper, onion, and green beans.</li>
+                <li>Add ground chicken.</li>
+                <li>Add sauce.</li>
+                <li>Serve with rice.</li>
+            </ol>
     </body>
 </html>
