--- a/recipes/greencurry.html
+++ b/recipes/greencurry.html
@@ -25,6 +25,6 @@
                       with a side of jasmine rice or enjoyed with delicate rice noodles,
                        Green Curry offers a delectable voyage through the enchanting
                         flavors of Thailand, each bite a moment to savor.</p>
-       
+       <h2>Ingredients</h2>
     </body>
 </html>
