Add Green Curry Ingredients List

--- a/recipes/greencurry.html
+++ b/recipes/greencurry.html
@@ -26,5 +26,17 @@
                        Green Curry offers a delectable voyage through the enchanting
                         flavors of Thailand, each bite a moment to savor.</p>
        <h2>Ingredients</h2>
+            <ul>
+                <li>Lemongrass</li>
+                <li>Ginger</li>
+                <li>Garlic</li>
+                <li>Coconut Sugar</li>
+                <li>Lime Juice</li>
+                <li>Ground Coriander</li>
+                <li>Thai Basil Leaves</li>
+                <li>Soy Sauce</li>
+                <li>Chilies</li>
+                <li>Rice</li>
+            </ul>
     </body>
 </html>
