--- a/recipes/greencurry.html
+++ b/recipes/greencurry.html
@@ -38,5 +38,8 @@
                 <li>Chilies</li>
                 <li>Rice</li>
             </ul>
+        <h2>Steps</h2>
+
+
     </body>
 </html>
