Add Green Curry Steps List

--- a/recipes/greencurry.html
+++ b/recipes/greencurry.html
@@ -39,7 +39,12 @@
                 <li>Rice</li>
             </ul>
         <h2>Steps</h2>
-
+            <ul>
+                <li>Add all the green curry paste ingredients into a food processor. Blend until it forms a smooth paste.</li>
+                <li>Pour a splash of coconut milk over medium heat until hot.</li>
+                <li>Add the curry paste.</li>
+                <li>Spoon the curry onto steamed rice and garnish with lime wedges and basil leaves, if using. Serve hot as a main dish.</li>
+            </ul>
 
     </body>
 </html>
