Add Pad Thai Ingredients Header

--- a/recipes/padthai.html
+++ b/recipes/padthai.html
@@ -22,5 +22,6 @@
                       in its colorful, flavorful splendor, offers not just a meal, but a journey through
                        the heart of Thai culinary artistry, where every ingredient plays a vital role in 
                        creating a melody of flavors, celebrated in every home and street corner in Thailand.</p>
+        <h2>Ingredients</h2>
     </body>
 </html>
