Add Pad Thai Steps List

--- a/recipes/padthai.html
+++ b/recipes/padthai.html
@@ -34,5 +34,13 @@
                 <li>Lime</li>
             </ul>
         <h2>Steps</h2>
+            <ol>
+                <li>Soak the rice noodles according to the package instructions.</li>
+                <li>Slice the chicken.</li>
+                <li>Chop the vegetables and herbs.</li>
+                <li>Crush or chop the peanuts.</li>
+                <li>Prepare the sauce by mixing tamarind paste, fish sauce, and sugar.</li>
+                <li>In the same pan, add a bit more oil if needed, and sauté garlic and red onions until aromatic.</li>
+            </ol>
     </body>
 </html>
