Add Link to greencurry.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/basilchicken.html">Basil Chicken Recipe</a>
+        <a href="./recipes/greencurry.html">Green Curry Recipe</a>
     </body>
 </html>
