Add Link to padthai.html in index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Odin Recipes</h1>
         <a href="./recipes/basilchicken.html">Basil Chicken Recipe</a>
         <a href="./recipes/greencurry.html">Green Curry Recipe</a>
+        <a href="./recipes/padthai.html">Pad Thai Recipe</a>
     </body>
 </html>
