--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/basilchicken.html">Basil Chicken Recipe</a>
-        <a href="./recipes/greencurry.html">Green Curry Recipe</a>
-        <a href="./recipes/padthai.html">Pad Thai Recipe</a>
+        <ul>
+            <li><a href="./recipes/basilchicken.html">Basil Chicken Recipe</a></li>
+            <li><a href="./recipes/greencurry.html">Green Curry Recipe</a></li>
+            <li><a href="./recipes/padthai.html">Pad Thai Recipe</a></li>
+        </ul>
     </body>
 </html>
